--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "highcharts": "^6.1.4",
+    "vue": "^2.5.2",
+    "vue-highcharts": "0.0.10"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
